# zeke

./: .gitignore  AI_PRIORITY.md  BLOCKCHAIN_IDEA.md  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DOCS.md  FEATURES_v0.3.2.md  GAMEPLAN.md  GHOSTAI_STACK.md  GHOSTFLOW_INTEGRATION.md  GHOSTLLM_RUST_INTEGRATION_GUIDE.md  GHOSTLLM_ZEKE_CLI.md  GHOSTSTACK_COMPLETE.md  GLYPH_INTEGRATION.md  GPT_IDEAS.md  GROVE_COMMIT.md  INSTALL.md  INTEGRATION_STATUS.md  INT_PROCESSES.md  JARVIS-BLOCKCHAIN.md  NOV_TODO.md  OMEN_INTEGRATION.md  OVERVIEW_INTEGRATION.md  PKGBUILD  POLISH_ROADMAP.md  QUICKSTART.md  README.md  RELEASE_NOTES_V028.md  REVOLUTIONARY_ROADMAP.md  TODO.md  TODO_GPT5.md  TODO_OCTOBER.md  WATCH_MODE.md  ZEKE.md  ZEKE_ROUTING.md  ZEKE_SPECS.md  ZION_INTEGRATION_COMPLETE.md  ZION_WISHLIST.md  ZSYNC_INT.md  (+18 more)
bindings/rust/: Cargo.toml  Makefile  build.rs
bindings/rust/integration-test/: Cargo.toml
bindings/rust/integration-test/src/: main.rs
bindings/rust/zeke/: Cargo.toml
bindings/rust/zeke-sys/: Cargo.toml  README.md  build.rs
bindings/rust/zeke-sys/src/: bindings_manual.rs  lib.rs  lib_full.rs
bindings/rust/zeke/src/: config.rs  error.rs  ffi_utils.rs  ghostllm.rs  lib.rs  provider.rs  response.rs  stream.rs  zeke.rs
bindings/rust/zeke/tests/: integration_tests.rs
config/omen/: omen.toml.example
config/zeke/: zeke.toml.example
db/migrations/: 0001_models.sql  0002_routing_core.sql
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FONTS.md  GHOSTLLM_INTEGRATION.md  HTTP_API.md  INDEXING.md  MIGRATION_GUIDE.md  OAUTH_PROXY_GUIDE.md  OMEN_DOCKER_GUIDE.md  PHANTOM_INTEGRATION.md  ROADMAP_TO_EXCEED.md  RUST_INTEGRATION.md  TOKYO_NIGHT_CUSTOMIZATION.md  TUI_FEATURES.md  UI_DESIGN_SPEC.md  ZEKE_V028_OVERVIEW.md  index.html
docs/api/: index.html
docs/claude/: oauth.md
docs/client/: index.html  search_index.json
docs/ghostllm/: search_index.json
docs/http_client/: index.html  search_index.json
docs/mod/: index.html  search_index.json
docs/oauth/: README.md  implementation.md  success.md  testing.md
docs/ollama/: index.html  search_index.json
examples/: zion_integration.zig
release/: PKGBUILD  README.md  RELEASE_NOTES.md  install.sh
release/scripts/: build-packages.sh
scripts/: build-rust-bindings.sh  e2e_smoke.sh
src/: cli_streaming.zig  error.rs  file_ops.zig  file_watcher.zig  formatting.zig  grove_stubs.c  lib.rs  main.rs  main.zig  root.zig  watch.zig
src/actions/: mod.rs
src/agent/: blockchain.zig  mod.zig  network.zig  security.zig  smartcontract.zig
src/agents/: blockchain.rs  mod.rs  network.rs  security.rs  smartcontract.rs  subagents.rs
src/ai/: cache.zig  commands.zig
src/api/: client.zig  http_client.zig  mod.rs
src/auth/: anthropic_oauth.zig  browser.zig  callback_server.zig  claude.rs  github.rs  github_oauth.zig  keyring.zig  manager.zig  mod.rs  mod.zig  pkce.zig
src/cli/: analyze.zig  auth.zig  completions.zig  config.zig  daemon.zig  doctor.zig  edit.zig  generate.zig  glyph.zig  help.zig  index.zig  lsp.zig  mod.rs  progress.zig  refactor.zig  serve.zig  tui.rs
src/concurrent/: mod.zig
src/config/: loader.zig  mod.rs  mod.zig  toml_loader.zig
src/context/: gatherer.zig  mod.zig
src/daemon/: client.zig  daemon.zig  lifecycle.zig
src/db/: routing.zig
src/error_handling/: mod.zig
src/events/: bus.zig  watcher.zig
src/ffi/: zeke_ffi.h  zeke_ffi.zig  zeke_ffi_minimal.h  zeke_ffi_minimal.zig
src/git/: mod.rs  mod.zig
src/index/: cache.zig  index.zig  parser.zig  searcher.zig  tree.zig  types.zig  walker.zig  watcher_integration.zig
src/integrations/: grove.zig  mod.zig  zap.zig
src/lsp/: client.zig  diagnostics.zig  jsonrpc.zig  lsp.zig  types.zig
src/mcp/: client.zig  mod.rs  mod.zig  rune_helpers.zig
src/models/: mod.zig
src/performance/: zsync_metrics.zig
src/providers/: azure.zig  claude.rs  claude.zig  copilot.rs  deepseek.rs  ghostllm.rs  ghostllm.zig  github_copilot.zig  google.zig  mod.rs  mod.zig  ollama.rs  ollama.zig  omen.zig  openai.rs  openai.zig  router.rs  xai.zig
src/routing/: router.zig  smart_router.zig
src/rpc/: ghost_rpc.zig  ghost_rpc_standalone.zig  http_server.zig  msgpack_rpc.zig  response_formats.zig  zhttp_server.zig
src/search/: mod.zig
src/storage/: context_store.zig  conversation_store.zig  database.zig  mod.zig  repo_db.zig  system_cache.zig
src/streaming/: mod.rs  mod.zig  sse_client.zig
src/system/: arch.zig
src/tools/: bash.rs  codegen.zig  edit.rs  editor.zig  file_editor.zig  glob.rs  grep.rs  mod.rs  mod.zig  read.rs  registry.zig  shell_runner.zig  smart_edit.zig  smart_git.zig  todo.rs  web.zig  (+3 more)
tests/: integration_test.rs
themes/: ghost-hacker-blue.json  tokyonight-moon.json  tokyonight-night.json  tokyonight-storm.json
wasm/: build.zig
(+54 files in other folders)
