[workspace]
members = [
    "zeke-sys",
    "zeke",
    "integration-test",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security and memory management
secrecy = "0.8"
zeroize = "1.7"

# Development dependencies
tempfile = "3.8"
env_logger = "0.10"

[workspace.metadata.docs.rs]
features = ["async", "ghostllm", "streaming"]
rustdoc-args = ["--cfg", "docsrs"]

# Common profiles for all workspace members
[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.test]
debug = true
opt-level = 0