[package]
name = "zeke-sys"
version = "0.2.0"
edition = "2024"
authors = ["Zeke Team <hello@ghostkellz.dev>"]
description = "Low-level Rust bindings for Zeke AI development companion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostkellz/zeke"
documentation = "https://docs.rs/zeke-sys"
readme = "README.md"
keywords = ["ai", "llm", "zig", "ffi", "bindings"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "zeke_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[features]
default = ["ghostllm"]
ghostllm = []  # Enable GhostLLM GPU acceleration features
streaming = [] # Enable streaming response features

[package.metadata.docs.rs]
features = ["ghostllm", "streaming"]
rustdoc-args = ["--cfg", "docsrs"]